--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "7.4.3",
     "@capacitor/app": "7.1.0",
     "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "7.4.3",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
+    "@capacitor/ios": "7.4.3",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/status-bar": "7.0.3",
